# gaia-ecs

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  404.html  AGENTS.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  annotated.html  annotated_dup.js  api_8h_source.html  api_8inl_source.html  archetype_8h_source.html  archetype__common_8h_source.html  archetype__graph_8h_source.html  bit__utils_8h_source.html  bitset_8h_source.html  bitset__iterator_8h_source.html  chunk_8h_source.html  chunk__allocator_8h_source.html  chunk__header_8h_source.html  chunk__iterator_8h_source.html  chunk__iterator__typed_8inl_source.html  classes.html  classgaia_1_1cnt_1_1bitset-members.html  classgaia_1_1cnt_1_1bitset.html  classgaia_1_1cnt_1_1bitset.js  classgaia_1_1cnt_1_1bitset__const__iterator-members.html  classgaia_1_1cnt_1_1bitset__const__iterator.html  classgaia_1_1cnt_1_1darr-members.html  classgaia_1_1cnt_1_1darr.html  classgaia_1_1cnt_1_1darr__ext-members.html  classgaia_1_1cnt_1_1darr__ext.html  classgaia_1_1cnt_1_1darr__ext__soa-members.html  (+1141 more)
.github/: FUNDING.yml
cmake/: SharedTracyProfiler.cmake  gaiaConfig.cmake.in  sanitizers.cmake
conan/: conanfile.py
docker/: Dockerfile  amd64.Dockerfile  build.sh  build_clang.sh  build_clang_cachegrind.sh  build_gcc.sh  readme.md  setup.bat  setup.sh
docs/: CMakeLists.txt  Doxyfile  header.html.in
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  api_8h.html  api_8h.js  api_8h_source.html  api_8inl.html  api_8inl.js  api_8inl_source.html  archetype_8h.html  archetype_8h.js  archetype_8h_source.html  archetype__common_8h.html  archetype__common_8h.js  archetype__common_8h_source.html  archetype__graph_8h.html  archetype__graph_8h.js  archetype__graph_8h_source.html  bit__utils_8h.html  bit__utils_8h.js  bit__utils_8h_source.html  bitset_8h.html  bitset_8h.js  bitset_8h_source.html  bitset__iterator_8h.html  bitset__iterator_8h.js  bitset__iterator_8h_source.html  chunk_8h.html  chunk_8h.js  chunk_8h_source.html  chunk__allocator_8h.html  chunk__allocator_8h.js  chunk__allocator_8h_source.html  chunk__header_8h.html  chunk__header_8h.js  chunk__header_8h_source.html  chunk__iterator_8h.html  chunk__iterator_8h.js  chunk__iterator_8h_source.html  classes.html  (+1335 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+157 more)
docs/site/: gaia-version-selector.css  gaia-version-selector.js  inject_version_selector.mjs
examples/cli/: CMakeLists.txt  Makefile
examples/cli/src/: main.cpp
include/: gaia.h
latest/: annotated.html  annotated_dup.js  api_8h_source.html  api_8inl_source.html  archetype_8h_source.html  archetype__common_8h_source.html  archetype__graph_8h_source.html  bit__utils_8h_source.html  bitset_8h_source.html  bitset__iterator_8h_source.html  chunk_8h_source.html  chunk__allocator_8h_source.html  chunk__header_8h_source.html  chunk__iterator_8h_source.html  chunk__iterator__typed_8inl_source.html  classes.html  classgaia_1_1cnt_1_1bitset-members.html  (+1416 more)
perf/: CMakeLists.txt
perf/duel/: CMakeLists.txt
perf/duel/src/: main.cpp
perf/gaia/: CMakeLists.txt
perf/gaia/src/: main.cpp
perf/perf/: perf.cpp
src/: CMakeLists.txt
src/dummy/: CMakeLists.txt
src/dummy/src/: main.cpp
src/examples/example1/: CMakeLists.txt
src/examples/example1/src/: main.cpp
src/examples/example2/: CMakeLists.txt
src/examples/example2/src/: dummy.cpp  main.cpp
src/examples/example3/: CMakeLists.txt
src/examples/example_app/: CMakeLists.txt
src/examples/example_app/src/: main.cpp
src/examples/example_dll/: CMakeLists.txt
src/examples/example_dll/include/: dll_api.h
src/examples/example_dll/src/: dll_api.cpp  dll_api.h
src/examples/example_external/: CMakeLists.txt
src/examples/example_external/src/: main.cpp
src/examples/example_roguelike/: CMakeLists.txt
src/examples/example_roguelike/src/: main.cpp
src/examples/example_rougelike/: CMakeLists.txt
src/examples/example_rougelike/src/: main.cpp
src/examples/example_wasm/: CMakeLists.txt
src/examples/example_wasm/src/: gaia_example_wasm.html  main.cpp
src/perf/: CMakeLists.txt
src/perf/app/: CMakeLists.txt
src/perf/app/src/: main.cpp  random.h
src/perf/duel/: CMakeLists.txt
src/perf/duel/src/: main.cpp
src/perf/entity/: CMakeLists.txt
src/perf/entity/src/: main.cpp
src/perf/iter/: CMakeLists.txt
src/perf/iter/src/: main.cpp
src/perf/matrix/: CMakeLists.txt
src/perf/matrix/src/: main.cpp
src/perf/mt/: CMakeLists.txt
src/perf/mt/src/: main.cpp
src/perf/perf/: CMakeLists.txt
src/perf/perf/src/: allocators.cpp  common.h  containers.cpp  entity_lifecycle.cpp  fragmented.cpp  funcs.cpp  legacy_entity.cpp  legacy_iter.cpp  main.cpp  mixed.cpp  observers.cpp  parent.cpp  perf_entity_lifecycle.cpp  perf_fragmented.cpp  perf_legacy_entity.cpp  perf_legacy_iter.cpp  perf_mixed.cpp  perf_observers.cpp  perf_parent.cpp  perf_query_hot_path.cpp  perf_registry.h  perf_sparse.cpp  perf_structural_changes.cpp  perf_systems.cpp  query_hot_path.cpp  registry.h  sparse.cpp  structural_changes.cpp  systems.cpp
src/test/: CMakeLists.txt
src/test/src/: main.cpp  test_common.h  test_core.cpp  test_ecs_entity.cpp  test_misc.cpp  test_mt.cpp  test_mutation_runtime.cpp  test_no_observers.cpp  test_observer.cpp  test_observer_basic.cpp  test_observer_prefab.cpp  test_observer_trav.cpp  test_parent.cpp  test_query_core.cpp  test_query_prefab.cpp  test_query_prefab_cache.cpp  test_query_prefab_inherit.cpp  test_serialization.cpp  test_storage.cpp  test_system.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/test/: test.cpp
(+473 files in other folders)
